[gd_scene load_steps=2 format=3 uid="uid://cld25d5sn167u"]

[ext_resource type="Script" uid="uid://b4068na67t3a8" path="res://Menus/MenuElements/player_select.gd" id="1_d4yoc"]

[node name="PlayerSelect" type="Control" node_paths=PackedStringArray("_player_texture")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4yoc")
_player_texture = NodePath("VBoxContainer/PlayerName/HBoxContainer/PlayerTexture")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerName" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PlayerName"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftButton" type="Button" parent="VBoxContainer/PlayerName/HBoxContainer"]
layout_mode = 2

[node name="PlayerTexture" type="TextureRect" parent="VBoxContainer/PlayerName/HBoxContainer"]
layout_mode = 2

[node name="RightButton" type="Button" parent="VBoxContainer/PlayerName/HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/PlayerName/HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayerName/HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
